--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,23 @@
 [project]
 name = "random-paper-implementations"
 version = "0.1.0"
-description = "Implementations of various condition monitoring methodologies"
-authors = [
-    {name = "ryanbalshaw81@gmail.com"}
-]
+description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "numpy (>=2.2.4,<3.0.0)",
-    "matplotlib (>=3.10.1,<4.0.0)",
-    "scikit-learn (>=1.6.1,<2.0.0)",
-    "scipy (>=1.15.2,<2.0.0)",
-    "detect-secrets (>=1.5.0,<2.0.0)"
+    "matplotlib>=3.10.1",
+    "numpy>=2.2.5",
+    "ruff>=0.11.6",
+    "scikit-learn>=1.6.1",
+    "scipy>=1.15.2",
 ]
 
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.11.6"
-pre-commit = "^4.2.0"
-flake8 = "^7.2.0"
-black = "^25.1.0"
-isort = "^6.0.1"
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "detect-secrets>=1.5.0",
+    "flake8>=7.2.0",
+    "isort>=6.0.1",
+    "pre-commit>=4.2.0",
+    "ruff>=0.11.6",
+]
