--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -6,9 +6,22 @@ on: # This will trigger the job on any file change
     push:
 
 jobs:
-    pre-commit:
+    uv-example:
+        name: python
         runs-on: ubuntu-latest
+
         steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-python@v3
-            - uses: pre-commit/action@v3.0.1
+            - uses: actions/checkout@v4
+
+            - name: Install uv
+              uses: astral-sh/setup-uv@v5
+              with:
+                  # Install a specific version of uv.
+                  version: 0.6.16
+
+            - name: Install the project
+              run: uv sync --locked --all-extras --dev
+
+            - name: Run tests
+        # For example, using `pytest`
+              run: uv run pre-commit run --all-files --hook-stage push --verbose
