--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ruff>=0.11.6",
     "scikit-learn>=1.6.1",
     "scipy>=1.15.2",
+    "tensorflow[and-cuda]>=2.20.0",
 ]
 
 [dependency-groups]
