--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "matplotlib>=3.10.1",
     "numpy>=2.2.5",
+    "pyqt6>=6.10.1",
     "ruff>=0.11.6",
     "scikit-learn>=1.6.1",
     "scipy>=1.15.2",
